--- a/MduiBlazor.Shared/Pages/ColorsPage.razor
+++ b/MduiBlazor.Shared/Pages/ColorsPage.razor
@@ -1,4 +1,4 @@
-@page "/color&theme"
+@page "/colors"
 
 <p>你可以点击页面右上角的
     <MduiIcon Name="color_lens" />图标来设置主题颜色，下面的颜色表的主色、强调色、主题色都会随之发生变化。
@@ -31,12 +31,12 @@
         </ul>
         <ul class="color-palette">
             <li class="mdui-text-color-theme-text color-name">Text（文本颜色）</li>
-            <li class="mdui-text-color-theme-text">@nameof(Colors.TextTheme.Default)</li>
-            <li class="mdui-text-color-theme-secondary">@nameof(Colors.TextTheme.Secondary)</li>
-            <li class="mdui-text-color-theme-disabled">@nameof(Colors.TextTheme.Disabled)</li>
-            <li class="mdui-text-color-theme-divider">@nameof(Colors.TextTheme.Divider)</li>
-            <li class="mdui-text-color-theme-icon">@nameof(Colors.TextTheme.Icon)</li>
-            <li class="mdui-text-color-theme-icon-disabled">@nameof(Colors.TextTheme.IconDisabled)</li>
+            <li class="mdui-text-color-theme-text">@nameof(Colors.TextColors.Theme.Default)</li>
+            <li class="mdui-text-color-theme-secondary">@nameof(Colors.TextColors.Theme.Secondary)</li>
+            <li class="mdui-text-color-theme-disabled">@nameof(Colors.TextColors.Theme.Disabled)</li>
+            <li class="mdui-text-color-theme-divider">@nameof(Colors.TextColors.Theme.Divider)</li>
+            <li class="mdui-text-color-theme-icon">@nameof(Colors.TextColors.Theme.Icon)</li>
+            <li class="mdui-text-color-theme-icon-disabled">@nameof(Colors.TextColors.Theme.IconDisabled)</li>
         </ul>
     </MduiCol>
 </MduiRow>
