--- a/MduiBlazor.Shared/Pages/GridPage.razor
+++ b/MduiBlazor.Shared/Pages/GridPage.razor
@@ -23,7 +23,7 @@
 
 <MduiDivider Class="mdui-m-y-5" />
 
-<div>
+<div id="p-g">
     <h2 id="examples">
         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Examples</MduiText>
     </h2>
