--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -3,7 +3,7 @@
         开始使用
     </MduiNavMenuItem>
     <MduiNavMenuCollapseItem Title="样式" Icon="layers" IconColor="@Colors.DeepOrange.Primary">
-        <MduiNavMenuItem Href="colors">颜色和主题</MduiNavMenuItem>
+        <MduiNavMenuItem Href="colors">颜色</MduiNavMenuItem>
         <MduiNavMenuItem Href="ripples">Ripples</MduiNavMenuItem>
         <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
     </MduiNavMenuCollapseItem>
