--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -2,8 +2,9 @@
     <MduiNavMenuItem Icon="near_me" IconColor="@Colors.Blue.Primary" Href="" Match="NavLinkMatch.All">
         开始使用
     </MduiNavMenuItem>
-    <MduiNavMenuCollapseItem Title="样式" Icon="layers" IconColor="@Colors.DeepOrange.Primary">
+    <MduiNavMenuCollapseItem Title="样式和布局" Icon="layers" IconColor="@Colors.DeepOrange.Primary">
         <MduiNavMenuItem Href="colors">颜色</MduiNavMenuItem>
+        <MduiNavMenuItem Href="layout">主题和布局</MduiNavMenuItem>
         <MduiNavMenuItem Href="ripples">Ripples</MduiNavMenuItem>
         <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
     </MduiNavMenuCollapseItem>
@@ -25,6 +26,7 @@
         <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
         <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
         <MduiNavMenuItem Href="tabs">Tabs</MduiNavMenuItem>
+        <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
     </MduiNavMenuCollapseItem>
     <MduiNavMenuCollapseItem Title="资源" Icon="local_mall" IconColor="@Colors.Purple.Primary">
         <MduiNavMenuItem Href="material_icon">Material图标</MduiNavMenuItem>
