--- a/mdui/src/index.less
+++ b/mdui/src/index.less
@@ -51,6 +51,7 @@
 @import './components/fab/index';
 @import './components/select/index';
 @import './components/toolbar/index';
+@import './components/tooltip/index';
 @import './components/appbar/index';
 @import './components/card/index';
 @import './components/tab/index';
