--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -5,8 +5,9 @@
     <MduiNavMenuCollapseItem Title="样式和布局" Icon="layers" IconColor="@Colors.DeepOrange.Primary">
         <MduiNavMenuItem Href="colors">颜色</MduiNavMenuItem>
         <MduiNavMenuItem Href="layout">主题和布局</MduiNavMenuItem>
+        <MduiNavMenuItem Href="grid">网格容器</MduiNavMenuItem>
+        <MduiNavMenuItem Href="typography">排版</MduiNavMenuItem>
         <MduiNavMenuItem Href="ripples">Ripples</MduiNavMenuItem>
-        <MduiNavMenuItem Href="typography">Typography</MduiNavMenuItem>
     </MduiNavMenuCollapseItem>
     <MduiNavMenuCollapseItem Title="组件" Icon="widgets" IconColor="@Colors.Green.Primary">
         <MduiNavMenuItem Href="bars">Bars</MduiNavMenuItem>
@@ -17,7 +18,6 @@
         <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
         <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
         <MduiNavMenuItem Href="inputs">Form & Inputs</MduiNavMenuItem>
-        <MduiNavMenuItem Href="grid">网格布局</MduiNavMenuItem>
         <MduiNavMenuItem Href="list">List</MduiNavMenuItem>
         <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
         <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
