--- a/MduiBlazor.Shared/Pages/MaterialICLPage.razor
+++ b/MduiBlazor.Shared/Pages/MaterialICLPage.razor
@@ -1,5 +1,7 @@
 @page "/material_icon"
 
+<PageTitle>Material图标库</PageTitle>
+
 <div class="mdui-container-fluid">
     <div class="mdui-row mdui-m-y-4">
         <div class="mdui-col-xs-12 mdui-col-sm-1 mdui-col-md-2"></div>
