--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -7,7 +7,7 @@
         <MduiNavMenuItem Href="layout">主题和布局</MduiNavMenuItem>
         <MduiNavMenuItem Href="grid">网格容器</MduiNavMenuItem>
         <MduiNavMenuItem Href="typography">排版</MduiNavMenuItem>
-        <MduiNavMenuItem Href="ripples">Ripples</MduiNavMenuItem>
+        <MduiNavMenuItem Href="icons">图标</MduiNavMenuItem>
     </MduiNavMenuCollapseItem>
     <MduiNavMenuCollapseItem Title="组件" Icon="widgets" IconColor="@Colors.Green.Primary">
         <MduiNavMenuItem Href="bars">Bars</MduiNavMenuItem>
@@ -29,6 +29,6 @@
         <MduiNavMenuItem Href="tooltip">工具提示</MduiNavMenuItem>
     </MduiNavMenuCollapseItem>
     <MduiNavMenuCollapseItem Title="资源" Icon="local_mall" IconColor="@Colors.Purple.Primary">
-        <MduiNavMenuItem Href="material_icon">Material图标</MduiNavMenuItem>
+        <MduiNavMenuItem Href="material_icon">Material图标库</MduiNavMenuItem>
     </MduiNavMenuCollapseItem>
 </MduiNavMenu>
