--- a/MduiBlazor/Components/Button/MduiFab.razor
+++ b/MduiBlazor/Components/Button/MduiFab.razor
@@ -2,5 +2,5 @@
 @inherits MduiComponentBase
 
 <button class="@Classname" style="@Style" @attributes="@AdditionalAttributes" @onclick="@OnClick">
-    <MduiIcon Name="@Icon" Class="@IconClass" Color="@IconColor" />
+    <MduiIcon Name="@Icon" Class="@IconClass" Color="@IconColor" Custom="@CustomIcon" />
 </button>
