--- a/MduiBlazor/Components/Button/MduiIconButton.razor
+++ b/MduiBlazor/Components/Button/MduiIconButton.razor
@@ -13,6 +13,6 @@
     }
     else if (!string.IsNullOrWhiteSpace(Icon))
     {
-        <MduiIcon Name="@Icon" Color="@IconColor" />
+        <MduiIcon Name="@Icon" Color="@IconColor" Custom="@CustomIcon" />
     }
 </MduiButton>
