--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -8,6 +8,7 @@
         <MduiNavMenuItem Href="grid">网格容器</MduiNavMenuItem>
         <MduiNavMenuItem Href="typography">排版</MduiNavMenuItem>
         <MduiNavMenuItem Href="icons">图标</MduiNavMenuItem>
+        <MduiNavMenuItem Href="media">媒体</MduiNavMenuItem>
     </MduiNavMenuCollapseItem>
     <MduiNavMenuCollapseItem Title="组件" Icon="widgets" IconColor="@Colors.Green.Primary">
         <MduiNavMenuItem Href="bars">Bars</MduiNavMenuItem>
