fix ionicons link error

--- a/MduiBlazor.Shared/Pages/IconsPage.razor
+++ b/MduiBlazor.Shared/Pages/IconsPage.razor
@@ -21,7 +21,7 @@
         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">Material图标</MduiText>
     </h2>
 
-    <p class="mdui-typo">我们列出了所有<a href="material_icon">Material Icons</a>的图标，你可以直接点击图标复制图标代码。</p>
+    <p class="mdui-typo">我们列出了所有<a href="material_icon">Material Icons</a>的图标，你可以直接点击图标获取图标代码。</p>
     <ExampleSection Component="@typeof(MaterialIcons)" />
 
     <p class="mdui-typo">图标可以用在按钮中。</p>
@@ -35,7 +35,7 @@
         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">第三方图标</MduiText>
     </h2>
 
-    <p class="mdui-typo">要使用第三方图标库，需要先引入第三方图标库的 CSS 文件。然后在<code>MduiIcon</code>、<code>MduiIconButton</code>等含有图标的组件中设置<code>Custom</code>或<code>CustomIcon</code>参数为<code>true</code>。下面的实例使用的是 <a href="ionicons.com">ionicons</a> 的图标。</p>
+    <p class="mdui-typo">要使用第三方图标库，需要先引入第三方图标库的 CSS 文件。然后在<code>MduiIcon</code>、<code>MduiIconButton</code>等含有图标的组件中设置<code>Custom</code>或<code>CustomIcon</code>参数为<code>true</code>。下面的实例使用的是 <a href="http://ionicons.com" target="_blank">ionicons</a> 的图标。</p>
     <ExampleSection Component="@typeof(ThirdIcons)" />
 </div>
 
