--- a/MduiBlazor.Shared/Pages/FabsPage.razor
+++ b/MduiBlazor.Shared/Pages/FabsPage.razor
@@ -9,7 +9,7 @@
 
 <PageContent>
     <PageContentItem Title="Examples" OnClick="@(_=>ScrollToElementById("examples"))">
-        <PageContentItem Title="浮动操作按钮" OnClick="@(_=>ScrollToElementById("simple"))" />
+        <PageContentItem Title="普通按钮" OnClick="@(_=>ScrollToElementById("simple"))" />
         <PageContentItem Title="Mini按钮" OnClick="@(_=>ScrollToElementById("mini"))" />
         <PageContentItem Title="隐藏/显示动画" OnClick="@(_=>ScrollToElementById("hide"))" />
     </PageContentItem>
