--- a/MduiBlazor.Shared/Pages/TypoPage.razor
+++ b/MduiBlazor.Shared/Pages/TypoPage.razor
@@ -3,9 +3,9 @@
 @using MduiBlazor.Shared.Pages.Examples.Typography
 
 <PageTitle>排版</PageTitle>
-<div class="mdui-m-y-5">
+<h1 class="mdui-m-y-5">
     <MduiText Typo="@Typo.display1" Color="@Colors.Theme.Primary">排版</MduiText>
-</div>
+</h1>
 
 <PageContent>
     <PageContentItem Title="字体排版" OnClick="@(_=>ScrollToElementById("typo"))" />
