--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -16,6 +16,7 @@
         <MduiNavMenuItem Href="bottomnav">BottomNav</MduiNavMenuItem>
         <MduiNavMenuItem Href="buttons">按钮</MduiNavMenuItem>
         <MduiNavMenuItem Href="fabbuttons">浮动操作按钮</MduiNavMenuItem>
+        <MduiNavMenuItem Href="divider">分割线</MduiNavMenuItem>
         <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
         <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
         <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
