--- a/MduiBlazor.Shared/Pages/LayoutPage.razor
+++ b/MduiBlazor.Shared/Pages/LayoutPage.razor
@@ -104,7 +104,7 @@
                     <td>
                         <code>AccentColor</code>
                     </td>
-                    <td>全局主题色，枚举类型，用于设置强调色颜色。默认<code>PrimaryColor.DeepPurple</code>。</td>
+                    <td>全局主题色，枚举类型，用于设置强调色颜色。默认<code>AccentColor.Pink</code>。</td>
                 </tr>
                 <tr>
                     <td>
