--- a/MduiBlazor.Shared/Pages/MediaPage.razor
+++ b/MduiBlazor.Shared/Pages/MediaPage.razor
@@ -27,15 +27,15 @@
         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">图片</MduiText>
     </h2>
 
-    <MduiText id="fluidimg" Typo="@Typo.subheading" Color="@Colors.Theme.Primary">响应式</MduiText>
+    <MduiText id="fluidimg" Typo="@Typo.subheading">响应式</MduiText>
     <p class="mdui-typo">在<code>MduiImage</code>组件设置<code>Fluid</code>参数为<code>true</code>可以使图片自适应它的父元素的宽度。</p>
     <ExampleSection Component="@typeof(FluidImage)" />
 
-    <MduiText id="roundedimg" Typo="@Typo.subheading" Color="@Colors.Theme.Primary">圆角图片</MduiText>
+    <MduiText id="roundedimg" Typo="@Typo.subheading">圆角图片</MduiText>
     <p class="mdui-typo">在<code>MduiImage</code>组件设置<code>Rounded</code>参数为<code>true</code>可以使图片具有圆角。</p>
     <ExampleSection Component="@typeof(RoundedImage)" />
 
-    <MduiText id="circleimg" Typo="@Typo.subheading" Color="@Colors.Theme.Primary">圆形图片</MduiText>
+    <MduiText id="circleimg" Typo="@Typo.subheading">圆形图片</MduiText>
     <p class="mdui-typo">在<code>MduiImage</code>组件设置<code>Circle</code>参数为<code>true</code>可以使图片变成圆形。</p>
     <ExampleSection Component="@typeof(CircleImage)" />
 </div>
@@ -47,11 +47,11 @@
         <MduiText Typo="@Typo.headline" Color="@Colors.Theme.Primary">视频</MduiText>
     </h2>
 
-    <MduiText id="iframevideo" Typo="@Typo.subheading" Color="@Colors.Theme.Primary">响应式嵌入式视频</MduiText>
+    <MduiText id="iframevideo" Typo="@Typo.subheading">响应式嵌入式视频</MduiText>
     <p class="mdui-typo">在嵌入式视频上嵌套<code>MduiVideoContainer</code>组件可以使视频自适应父元素的宽度。</p>
     <ExampleSection Component="@typeof(IFrameVideo)" />
 
-    <MduiText id="h5video" Typo="@Typo.subheading" Color="@Colors.Theme.Primary">响应式HTML5视频</MduiText>
+    <MduiText id="h5video" Typo="@Typo.subheading">响应式HTML5视频</MduiText>
     <p class="mdui-typo">在<code>video</code>标签上嵌套<code>MduiVideoContainer</code>组件可以使视频自适应父元素的宽度。</p>
     <ExampleSection Component="@typeof(Html5Video)" />
 </div>
