--- a/MduiBlazor.Shared/Shared/NavMenu.razor
+++ b/MduiBlazor.Shared/Shared/NavMenu.razor
@@ -18,6 +18,7 @@
         <MduiNavMenuItem Href="fabbuttons">浮动操作按钮</MduiNavMenuItem>
         <MduiNavMenuItem Href="select">下拉选择</MduiNavMenuItem>
         <MduiNavMenuItem Href="divider">分割线</MduiNavMenuItem>
+        <MduiNavMenuItem Href="panels">可扩展面板</MduiNavMenuItem>
         <MduiNavMenuItem Href="cards">Cards</MduiNavMenuItem>
         <MduiNavMenuItem Href="chips">Chips</MduiNavMenuItem>
         <MduiNavMenuItem Href="dialogs">Dialogs</MduiNavMenuItem>
@@ -25,7 +26,6 @@
         <MduiNavMenuItem Href="list">List</MduiNavMenuItem>
         <MduiNavMenuItem Href="menus">Menus</MduiNavMenuItem>
         <MduiNavMenuItem Href="pagination">Pagination</MduiNavMenuItem>
-        <MduiNavMenuItem Href="panels">Panels</MduiNavMenuItem>
         <MduiNavMenuItem Href="progress">Progress</MduiNavMenuItem>
         <MduiNavMenuItem Href="snackbars">Snackbars</MduiNavMenuItem>
         <MduiNavMenuItem Href="tables">Tables</MduiNavMenuItem>
