--- a/MduiBlazor/Components/Input/MduiTextField.razor
+++ b/MduiBlazor/Components/Input/MduiTextField.razor
@@ -2,9 +2,10 @@
 @inherits MduiComponentBase
 
 <MduiField @ref="@_field" Class="@Classname" Style="@Style" AdditionalAttributes="@AdditionalAttributes"
-           Disabled="@Disabled" Label="@Label" Icon="@Icon" HelperText="@HelperText"
-           ErrorText="@ErrorText" UseMduiTypo="@UseMduiTypo">
-    <MduiInputText Value="@Value" ValueChanged="@ValueChanged" ValueExpression="@ValueExpression" Type="@Type" AutoFocus="@AutoFocus" Disabled="@Disabled"
-                   MaxLength="@MaxLength" Pattern="@Pattern" Placeholder="@Placeholder" OnInput="@OnInput"
-                   Readonly="@Readonly" Required="@Required" Rows="@Rows" Trim="@Trim" />
+       Disabled="@Disabled" Label="@Label" Icon="@Icon" HelperText="@HelperText" ErrorText="@ErrorText"
+       UseMduiTypo="@UseMduiTypo">
+       <MduiInputText Value="@Value" ValueChanged="@OnValueChanged" ValueExpression="@ValueExpression" Type="@Type"
+              AutoFocus="@AutoFocus" Disabled="@Disabled" MaxLength="@MaxLength" Pattern="@Pattern"
+              Placeholder="@Placeholder" OnInput="@OnInput" Readonly="@Readonly" Required="@Required" Rows="@Rows"
+              Trim="@Trim" />
 </MduiField>
